other/restrict-sa-automount-sa-token/.kyverno-test/resource.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: good-svc
automountServiceAccountToken: false
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: bad-svc
automountServiceAccountToken: true
